scripts/eks/appsignals/sample-app/k8s-nginx-ingress/petclinic-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: config-server
            port:
              number: 8888
      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: discovery-server
            port:
              number: 8761
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vets-service-java
            port:
              number: 8083
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visits-service-java
            port:
              number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-service-python
            port:
              number: 8800
      - path: /
        pathType: Prefix
        backend:
          service:
            name: insurance-service-python
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customers-service-java
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nutrition-service-nodejs
            port:
              number: 3000
